# rust-mini-webcrawler

./: Cargo.toml  products.csv  readme.md
src/: main.rs
