[package]
name = "rust-mini-webcrawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
scraper = "0.18"
url = "2.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
